feat: 完成mcp测试