@@ -9,6 +9,8 @@ import java.io.IOException;
 import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
 import java.nio.file.Paths;
+import java.util.Arrays;
+import java.util.Objects;
 
 /**
  * 提示词模板加载器
@@ -17,25 +19,23 @@ import java.nio.file.Paths;
 @Service
 public class PromptService {
 
+
+
     private static final String PROMPT_TEMPLATE_PATH = "classpath:prompt.txt";
 
     @Autowired
     private ResourceLoader resourceLoader;
 
-    // volatile 确保多线程环境下的可见性
     private volatile String promptTemplate;
 
     /**
-     * 获取提示词模板
-     * 使用双重检查锁定模式确保线程安全和高性能
+     * 线程安全懒加载模板
      */
     private String getPromptTemplate() {
-        // 第一次检查，避免不必要的同步
         if (promptTemplate == null) {
             synchronized (this) {
-                // 第二次检查，确保只加载一次
                 if (promptTemplate == null) {
-                    promptTemplate = loadTemplateFromFile();
+                    promptTemplate = loadTemplate();
                 }
             }
         }
@@ -43,21 +43,53 @@ public class PromptService {
     }
 
     /**
-     * 从文件中加载提示词模板
+     * 加载模板；失败即抛异常，避免静默空串
      */
-    private String loadTemplateFromFile() {
+    private String loadTemplate() {
         try {
             Resource resource = resourceLoader.getResource(PROMPT_TEMPLATE_PATH);
-            return new String(Files.readAllBytes(Paths.get(resource.getURI())), StandardCharsets.UTF_8).strip();
+            if (!resource.exists()) {
+                throw new IllegalStateException("classpath 下找不到 prompt.txt");
+            }
+            String content = new String(resource.getInputStream().readAllBytes(), StandardCharsets.UTF_8);
+            return content.strip();
         } catch (IOException e) {
-            // 如果文件加载失败，使用默认模板作为备用
-            return "";
+            throw new IllegalStateException("加载 prompt.txt 失败", e);
         }
     }
 
-    // 通过加载器获取提示词模板
-    public String buildPrompt(Object... params) {
-        // 使用加载器获取模板并格式化
-        return String.format(getPromptTemplate(), params);
+    /**
+     * 按顺序替换模板中的 %{s}
+     *
+     * @param params 可变参数，依次对应模板中的 %{s}
+     */
+    public String buildPrompt(String... params) {
+        Objects.requireNonNull(params, "params must not be null");
+        String template = getPromptTemplate();
+
+        int placeholderCount = countPlaceholder(template);
+        if (placeholderCount != params.length) {
+            throw new IllegalArgumentException(
+                    "模板需要 " + placeholderCount + " 个参数，实际传入 " + params.length);
+        }
+
+        String result = template;
+        for (String p : params) {
+            result = result.replaceFirst("%\\{s}", p == null ? "" : p);
+        }
+        System.err.println("result的内容"+result);
+
+        return result;
     }
+
+    private static int countPlaceholder(String template) {
+        int count = 0, idx = 0;
+        while ((idx = template.indexOf("%{s}", idx)) != -1) {
+            count++;
+            idx += 4;
+        }
+        return count;
+    }
+
+
 }
